day4/workshop4/first-attempt/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: wordpress
  labels:
    name: wordpress-svc
spec:
  selector:
    app: wordpress-deployment-pod
  ports:
  - port: 80
    targetPort: 80
