day4/workshop4/first-attempt/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ing
  namespace: wordpress
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.163.47.11.239.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-svc
            port:
              number: 80
